--- a/src/components/common/cards/ArticleCard/styles.less
+++ b/src/components/common/cards/ArticleCard/styles.less
@@ -1,4 +1,5 @@
 @import "../../../../styles/variables.less";
+@import "../../../../pages/Game/common.less";
 
 .article-card {
   background: #fff;
@@ -142,7 +143,8 @@
           padding: 6px 0;
           border-radius: 0;
           font-size: 14px;
-          font-weight: 600;
+          font-weight: 700;
+          font-family: var(--font-serif);
           border: none;
           cursor: pointer;
           transition: all 0.3s;
