--- a/src/components/common/cards/DiscoveryCard/styles.less
+++ b/src/components/common/cards/DiscoveryCard/styles.less
@@ -1,4 +1,5 @@
 @import "../../../../styles/variables.less";
+@import "../../../../pages/Game/common.less";
 
 .discovery-card-wrapper {
   display: flex;
@@ -147,7 +148,7 @@
       color: #6abe45;
       padding: 6px 0;
       font-size: 16px;
-      font-weight: 600;
+      font-weight: 700;
       border: none;
       font-family: var(--font-serif);
       cursor: pointer;
