--- a/src/pages/Game/common.less
+++ b/src/pages/Game/common.less
@@ -66,6 +66,7 @@
   font-size: 1.1rem;
   text-transform: uppercase;
   letter-spacing: 1px;
+  cursor: pointer;
 
   // Style nút kiểu "Con Triện"
   background: @seal-red;
